--- a/Project/app/src/main/res/values/strings.xml
+++ b/Project/app/src/main/res/values/strings.xml
@@ -1,14 +1,25 @@
 <resources>
     <string name="app_name">JuiceFinder</string>
-    <string name="title_activity_map">MapActivity</string>
+    <string name="title_activity_map" translatable="false">MapActivity</string>
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
+    <string name="first_fragment_label" translatable="false">First Fragment</string>
+    <string name="second_fragment_label" translatable="false">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
+    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
+    <string name="details_streetname" translatable="false">streetname</string>
+    <string name="details_type" translatable="false">Type</string>
+    <string name="details_price" translatable="false">price</string>
+    <string name="details_power" translatable="false">power</string>
+    <string name="image_of_ev_charging_station">image of EV charging station</string>
+    <string name="details_goto_desc">go to this charger</string>
+    <string name="details_closeButton_desc">a close button</string>
+    <string name="filter_max_results">Max results</string>
+    <string name="filter_distance">Distance</string>
+    <string name="filter_distance_unit_use_kilometers">Distance Unit (Use kilometers)</string>
+    <string name="filter_apply_button_desc">Apply filters</string>
 </resources>
